minor renaming for better consistency